# hogger

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  girthub  girthub.pub  prometheus.yml  setup.sh
k8s/: hogger-api.yaml  hogger-bulk-worker.yaml  hogger-worker.yaml  mongo-deployment.yaml
src/: bulk-worker.rs  main.rs  metrics.rs  routes.rs  worker.rs
src/config/: mod.rs
src/controllers/: hog_controller.rs  mod.rs
src/errors/: mod.rs
src/models/: advanced_options_request.rs  advanced_options_response.rs  client_request.rs  hog.rs  hog_client_schema.rs  hog_record.rs  mod.rs  options.rs  statistics.rs
src/services/: hog_service.rs  mod.rs
src/utils/: utils.rs
src/validator/: mod.rs
