[package]
name = "hogger"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
mongodb = { version = "3.2.3"}
tower = "0.5.2"
chrono = { version = "0.4", features = ["serde"] }
hyper = "1.6.0"
axum-server = "0.7.2"
futures = "0.3.31"
uuid = "1.16.0"
